LF-5114 Fix the collapse button positioning so that it works with a variable --global-navbar-height
The original formula was moving the collapse button relative to the rest of top menu when the --global-navbar-height was updated

--- a/packages/webapp/src/components/Navigation/SideMenu/styles.module.scss
+++ b/packages/webapp/src/components/Navigation/SideMenu/styles.module.scss
@@ -582,7 +582,7 @@
   border: 1px solid #d1e9d9;
   padding: 4px;
   position: fixed;
-  top: calc(var(--global-navbar-height) / 2 - 12px);
+  top: calc(var(--global-navbar-height) - 44px);
   left: calc(var(--global-side-menu-width) - 14px);
   background-color: white;
   z-index: 1300;
